Fix image close modal button alignment in phone and tablet

--- a/assets/styles/ui-components/_modaal.scss
+++ b/assets/styles/ui-components/_modaal.scss
@@ -10,7 +10,15 @@
     .modaal-close {
         position: absolute !important;
         right: 1px !important;
-        top: -7% !important;
+        top: -25% !important;
+
+        @include from($tablet) {
+            top: -10% !important;
+        }
+
+        @include from($widescreen) {
+            top: -7% !important;
+        }
     }
 
     .modaal-gallery-item {
